fix padding spacing

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -25,7 +25,7 @@ body {
 
 .resource-container .head {
     display: flex;
-    margin-bottom: 4px;
+    margin-bottom: 8px;
 }
 
 .resource-container .head img {
